src/api/dcps/c99/include/dds/qos.h


typedef struct nn_xqos dds_qos_t;
typedef enum dds_durability_kind
{
  DDS_DURABILITY_VOLATILE,
  DDS_DURABILITY_TRANSIENT_LOCAL,
  DDS_DURABILITY_TRANSIENT,
  DDS_DURABILITY_PERSISTENT
}
dds_durability_kind_t;
typedef enum dds_history_kind
{
  DDS_HISTORY_KEEP_LAST,
  DDS_HISTORY_KEEP_ALL
}
dds_history_kind_t;
typedef enum dds_ownership_kind
{
  DDS_OWNERSHIP_SHARED,
  DDS_OWNERSHIP_EXCLUSIVE
}
dds_ownership_kind_t;
typedef enum dds_liveliness_kind
{
  DDS_LIVELINESS_AUTOMATIC,
  DDS_LIVELINESS_MANUAL_BY_PARTICIPANT,
  DDS_LIVELINESS_MANUAL_BY_TOPIC
}
dds_liveliness_kind_t;
typedef enum dds_reliability_kind
{
  DDS_RELIABILITY_BEST_EFFORT,
  DDS_RELIABILITY_RELIABLE
}
dds_reliability_kind_t;
typedef enum dds_destination_order_kind
{
  DDS_DESTINATIONORDER_BY_RECEPTION_TIMESTAMP,
  DDS_DESTINATIONORDER_BY_SOURCE_TIMESTAMP
}
dds_destination_order_kind_t;
typedef enum dds_presentation_access_scope_kind
{
  DDS_PRESENTATION_INSTANCE,
  DDS_PRESENTATION_TOPIC,
  DDS_PRESENTATION_GROUP
}
dds_presentation_access_scope_kind_t;
DDS_EXPORT dds_qos_t * dds_qos_create (void);
DDS_EXPORT void dds_qos_delete (dds_qos_t * restrict qos);
DDS_EXPORT void dds_qos_reset (dds_qos_t * restrict qos);
DDS_EXPORT void dds_qos_copy (dds_qos_t * restrict dst, const dds_qos_t * restrict src);
DDS_EXPORT void dds_qos_merge (dds_qos_t * restrict dst, const dds_qos_t * restrict src);