src/api/dcps/python/code/dds.pxd

#
#                         Vortex OpenSplice
#
#   This software and documentation are Copyright 2006 to TO_YEAR ADLINK
#   Technology Limited, its affiliated companies and licensors. All rights
#   reserved.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#
# Python API - for listener callbacks
cdef extern from "Python.h":
    void PyEval_InitThreads()

# The C99 API
cdef extern from "dds.h" nogil:

    cdef int DDS_RETCODE_OK                   #0 /**< Success */
    cdef int DDS_RETCODE_ERROR                #1 /**< Non specific error */
    cdef int DDS_RETCODE_UNSUPPORTED          #2 /**< Feature unsupported */
    cdef int DDS_RETCODE_BAD_PARAMETER        #3 /**< Bad parameter value */
    cdef int DDS_RETCODE_PRECONDITION_NOT_MET #4 /**< Precondition for operation not met */
    cdef int DDS_RETCODE_OUT_OF_RESOURCES     #5 /**< When an operation fails because of a lack of resources */
    cdef int DDS_RETCODE_NOT_ENABLED          #6 /**< When a configurable feature is not enabled */
    cdef int DDS_RETCODE_IMMUTABLE_POLICY     #7 /**< When an attempt is made to modify an immutable policy */
    cdef int DDS_RETCODE_INCONSISTENT_POLICY  #8 /**< When a policy is used with inconsistent values */
    cdef int DDS_RETCODE_ALREADY_DELETED      #9 /**< When an attempt is made to delete something more than once */
    cdef int DDS_RETCODE_TIMEOUT              #10 /**< When a timeout has occurred */
    cdef int DDS_RETCODE_NO_DATA              #11 /*< When expected data is not provided */
    cdef int DDS_RETCODE_ILLEGAL_OPERATION    #12 /*< When a function is called when it should not be */

    cdef unsigned DDS_INCONSISTENT_TOPIC_STATUS
    cdef unsigned DDS_OFFERED_DEADLINE_MISSED_STATUS
    cdef unsigned DDS_REQUESTED_DEADLINE_MISSED_STATUS
    cdef unsigned DDS_OFFERED_INCOMPATIBLE_QOS_STATUS
    cdef unsigned DDS_REQUESTED_INCOMPATIBLE_QOS_STATUS
    cdef unsigned DDS_SAMPLE_LOST_STATUS
    cdef unsigned DDS_SAMPLE_REJECTED_STATUS
    cdef unsigned DDS_DATA_ON_READERS_STATUS
    cdef unsigned DDS_DATA_AVAILABLE_STATUS
    cdef unsigned DDS_LIVELINESS_LOST_STATUS
    cdef unsigned DDS_LIVELINESS_CHANGED_STATUS
    cdef unsigned DDS_PUBLICATION_MATCHED_STATUS
    cdef unsigned DDS_SUBSCRIPTION_MATCHED_STATUS

    # return code functions and macros
    cdef int dds_err_no(int e)
    cdef const char * dds_err_str (int err)
    cdef const char * dds_err_mod_str (int err);

    # basic types
    ctypedef signed char  int8_t
    ctypedef signed short int16_t
    ctypedef signed int   int32_t
    ctypedef signed long  int64_t
    ctypedef unsigned char  uint8_t
    ctypedef unsigned short uint16_t
    ctypedef unsigned int   uint32_t
    ctypedef unsigned long long uint64_t

    # basic DDS type definitions
    ctypedef int64_t dds_duration_t
    ctypedef int64_t dds_time_t
    ctypedef uint64_t dds_instance_handle_t

    cdef int DDS_HANDLE_NIL #0

    cdef dds_duration_t DDS_INFINITY
    cdef int DDS_LENGTH_UNLIMITED
    cdef int DDS_DOMAIN_DEFAULT

    cdef enum dds_presentation_access_scope_kind:
        instance,
        topic,
        group

    ctypedef enum dds_durability_kind_t:
        volatile,
        transient_local,
        transient,
        persistent

    cdef enum dds_ownership_kind:
        shared,
        exclusive

    cdef enum dds_liveliness_kind:
        automatic,
        manual_by_participant,
        manual_by_topic

    cdef enum dds_reliability_kind:
        best_effort,
        reliable

    cdef enum dds_destination_order_kind:
        by_reception_timestamp,
        by_source_timestamp

    cdef enum dds_history_kind:
        keep_last,
        keep_all

    ctypedef enum dds_sample_state_t:
        read = 1,
        not_read = 2

    ctypedef enum dds_view_state_t:
        new = 4,
        not_new = 8

    ctypedef enum dds_instance_state_t:
        alive = 16,
        not_alive_disposed = 32,
        not_alive_no_writers = 64

    ctypedef void *dds_entity_t
    ctypedef void *dds_condition_t
    ctypedef void *dds_waitset_t
    ctypedef int   dds_domainid_t
    ctypedef void *dds_attach_t
    ctypedef struct dds_qos_t:
        pass
    ctypedef struct dds_topic_descriptor_t:
        pass
    ctypedef struct dds_condition_seq:
        uint32_t _length
        dds_condition_t *_buffer
        bint _release

    # status type definitions
    ctypedef enum dds_sample_rejected_status_kind:
        not_rejected,
        rejected_by_instance_limit,
        rejected_by_samples_limit,
        rejected_by_samples_per_instance_limit

    ctypedef struct dds_offered_deadline_missed_status_t:
        uint32_t total_count
        int32_t total_count_change
        dds_instance_handle_t last_instance_handle

    ctypedef struct dds_offered_incompatible_qos_status_t:
        uint32_t total_count
        int32_t total_count_change
        uint32_t last_policy_id

    ctypedef struct dds_publication_matched_status_t:
        uint32_t total_count
        int32_t total_count_change
        uint32_t current_count
        int32_t current_count_change
        dds_instance_handle_t last_subscription_handle

    ctypedef struct dds_liveliness_lost_status_t:
        uint32_t total_count
        int32_t total_count_change

    ctypedef struct dds_subscription_matched_status_t:
        uint32_t total_count
        int32_t total_count_change
        uint32_t current_count
        int32_t current_count_change
        dds_instance_handle_t last_publication_handle

    ctypedef struct dds_sample_rejected_status_t:
        uint32_t total_count
        int32_t total_count_change
        dds_sample_rejected_status_kind last_reason
        dds_instance_handle_t last_instance_handle

    ctypedef struct dds_liveliness_changed_status_t:
        uint32_t alive_count
        uint32_t not_alive_count
        int32_t alive_count_change
        int32_t not_alive_count_change
        dds_instance_handle_t last_publication_handle

    ctypedef struct dds_requested_deadline_missed_status_t:
        uint32_t total_count
        int32_t total_count_change
        dds_instance_handle_t last_instance_handle

    ctypedef struct dds_requested_incompatible_qos_status_t:
        uint32_t total_count
        int32_t total_count_change
        uint32_t last_policy_id

    ctypedef struct dds_sample_lost_status_t:
        uint32_t total_count
        int32_t total_count_change

    ctypedef struct dds_inconsistent_topic_status_t:
        uint32_t total_count
        int32_t total_count_change

    # Status condition getters
    int dds_get_inconsistent_topic_status (dds_entity_t topic, dds_inconsistent_topic_status_t * status)
    int dds_get_publication_matched_status (dds_entity_t writer, dds_publication_matched_status_t * status)
    int dds_get_liveliness_lost_status (dds_entity_t writer, dds_liveliness_lost_status_t * status)
    int dds_get_offered_deadline_missed_status (dds_entity_t writer, dds_offered_deadline_missed_status_t * status)
    int dds_get_offered_incompatible_qos_status (dds_entity_t writer, dds_offered_incompatible_qos_status_t * status)
    int dds_get_subscription_matched_status (dds_entity_t reader, dds_subscription_matched_status_t * status)
    int dds_get_liveliness_changed_status (dds_entity_t reader, dds_liveliness_changed_status_t * status)
    int dds_get_sample_rejected_status (dds_entity_t reader, dds_sample_rejected_status_t * status)
    int dds_get_sample_lost_status (dds_entity_t reader, dds_sample_lost_status_t * status)
    int dds_get_requested_deadline_missed_status (dds_entity_t reader, dds_requested_deadline_missed_status_t * status)
    int dds_get_requested_incompatible_qos_status (dds_entity_t reader, dds_requested_incompatible_qos_status_t * status)

    # Listeners callback function definitions
    ctypedef void (*on_inconsistent_topic_fnc) (dds_entity_t topic, dds_inconsistent_topic_status_t * status)
    ctypedef void (*on_offered_deadline_missed_fnc) (dds_entity_t writer, dds_offered_deadline_missed_status_t * status)
    ctypedef void (*on_offered_incompatible_qos_fnc) (dds_entity_t writer, dds_offered_incompatible_qos_status_t * status)
    ctypedef void (*on_liveliness_lost_fnc) (dds_entity_t writer, dds_liveliness_lost_status_t * status)
    ctypedef void (*on_publication_matched_fnc) (dds_entity_t writer, dds_publication_matched_status_t * status)
    ctypedef void (*on_requested_deadline_missed_fnc) (dds_entity_t reader, dds_requested_deadline_missed_status_t * status)
    ctypedef void (*on_requested_incompatible_qos_fnc) (dds_entity_t reader, dds_requested_incompatible_qos_status_t * status)
    ctypedef void (*on_sample_rejected_fnc) (dds_entity_t reader, dds_sample_rejected_status_t * status)
    ctypedef void (*on_liveliness_changed_fnc) (dds_entity_t reader, dds_liveliness_changed_status_t * status)
    ctypedef void (*on_data_available_fnc) (dds_entity_t reader)
    ctypedef void (*on_subscription_matched_fnc) (dds_entity_t reader, dds_subscription_matched_status_t * status)
    ctypedef void (*on_sample_lost_fnc) (dds_entity_t reader, dds_sample_lost_status_t * status)
    ctypedef void (*on_data_readers_fnc) (dds_entity_t subscriber)

    # Listener definitions
    ctypedef struct dds_topiclistener_t:
        on_inconsistent_topic_fnc on_inconsistent_topic

    ctypedef struct dds_writerlistener_t:
        on_offered_deadline_missed_fnc on_offered_deadline_missed
        on_offered_incompatible_qos_fnc on_offered_incompatible_qos
        on_liveliness_lost_fnc on_liveliness_lost
        on_publication_matched_fnc on_publication_matched

    ctypedef struct dds_readerlistener_t:
        on_requested_deadline_missed_fnc on_requested_deadline_missed
        on_requested_incompatible_qos_fnc on_requested_incompatible_qos
        on_sample_rejected_fnc on_sample_rejected
        on_liveliness_changed_fnc on_liveliness_changed
        on_data_available_fnc on_data_available
        on_subscription_matched_fnc on_subscription_matched
        on_sample_lost_fnc on_sample_lost

    ctypedef struct dds_publisherlistener_t:
        dds_writerlistener_t writerlistener

    ctypedef struct dds_subscriberlistener_t:
        dds_readerlistener_t readerlistener
        on_data_readers_fnc on_data_readers

    ctypedef struct dds_participantlistener_t:
        dds_topiclistener_t topiclistener
        dds_publisherlistener_t publisherlistener
        dds_subscriberlistener_t subscriberlistener

    # Sample info
    ctypedef struct dds_sample_info_t:
        dds_sample_state_t sample_state
        dds_view_state_t view_state
        dds_instance_state_t instance_state
        bint valid_data
        dds_time_t source_timestamp
        dds_instance_handle_t instance_handle
        dds_instance_handle_t publication_handle
        uint32_t disposed_generation_count
        uint32_t no_writers_generation_count
        uint32_t sample_rank
        uint32_t generation_rank
        uint32_t absolute_generation_rank
        dds_time_t reception_timestamp

    # QoS functions
    dds_qos_t * dds_qos_create ()
    void dds_qos_get (dds_entity_t e, dds_qos_t * qos)
    void dds_qos_delete (dds_qos_t *qos)
    void dds_qos_reset (dds_qos_t *qos)
    void dds_qos_copy (dds_qos_t *dst, const dds_qos_t *src)
    void dds_qos_merge (dds_qos_t *dst, const dds_qos_t *src)
